# API-en-Rust-con-Google-Drive

./: .gitignore  Cargo.toml  Dockerfile  README.md
.compose/: .env.example  compose.yml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
src/: lib.rs  main.rs
src/adapters/: config.rs  mod.rs
src/adapters/driven/: google_drive_service.rs  mod.rs  user_repository.rs
src/adapters/driving/http/: handlers.rs  mod.rs  state.rs
src/adapters/driving/http/middlewares/: authentication.rs  logging.rs  mod.rs
src/adapters/driving/http/utils/: responses.rs
src/application/ports/: google_drive_service.rs  mod.rs  user_repository.rs
src/application/usecases/: download_pdf.rs  get_google_auth_url.rs  handle_google_callback.rs  list_files.rs  mod.rs  upload_pdf.rs
src/application/usecases/list_files/: usecase.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  token_data.rs  user.rs
src/domain/value_objects/: email.rs  file_info.rs  id.rs  mod.rs
