[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
google-drive3 = "6.0.0"
hyper-util = "0.1.9"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mongodb = "3.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
